<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MagicTouch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="signin">Sign-in</string>
    <string name="touchid_or_email">TouchId or Email</string>
    <string name="password">Password</string>
    <string name="create_me_touch_id">Create my touch id</string>
    <string name="sign_in_with_facebook">Sign-in with Facebook</string>
    <string name="create_my_touch_id">Create my touch id</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign-in</string>
    <string name="action_search">Search</string>
    <string name="title">Profile</string>
    <string name="fixedAspectRatio">fixedAspectRatio =</string>
    <string name="aspectRatioX">\u002010</string>
    <string name="aspectRatioXHeader">aspectRatioX =</string>
    <string name="aspectRatioY">\u002010</string>
    <string name="aspectRatioYHeader">aspectRatioY =</string>
    <string name="showGuidelines">showGuidelines = </string>
    <string name="crop">Crop</string>
    <string name="rotate">Rotate</string>
    <string name="croppedImageDesc">The cropped image.</string>

    <string-array name="showGuidelinesArray">
        <item>Off</item>
        <item>On Touch</item>
        <item>On</item>
    </string-array>
    <string name="select">select</string>
    <string name="choose">choose</string>

</resources>
