<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_2" >

    <TextView
        android:id="@+id/signinlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="14dp"
        android:text="@string/create_my_touch_id" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/touchid"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:background="@drawable/text_bg"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/cnfpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_below="@+id/password"
        android:layout_marginTop="14dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@drawable/text_bg"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cnfpassword"
        android:layout_alignRight="@+id/cnfpassword"
        android:layout_below="@+id/cnfpassword"
        android:textStyle="bold"
        android:layout_marginTop="14dp"
        android:background="#ffbf25"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/touchid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_alignRight="@+id/touchid"
        android:layout_below="@+id/signinlabel"
        android:layout_marginTop="14dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@drawable/text_bg"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:ems="10"
        android:hint="@string/touchid_or_email"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <ImageView
        android:id="@+id/passval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/password"
        android:layout_toRightOf="@+id/password"
        android:src="@drawable/ic_action_error" />

    <ImageView
        android:id="@+id/cnfpassval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/cnfpassword"
        android:layout_toRightOf="@+id/cnfpassword"
        android:src="@drawable/ic_action_error" />

    <ImageView
        android:id="@+id/useridval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/touchid"
        android:layout_toRightOf="@+id/touchid"
        android:src="@drawable/ic_action_error" />

    <TextView
        android:id="@+id/opensignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginTop="14dp"
        android:text="Already registered, let me sign-in" />

</RelativeLayout>